@@ -1,5 +1,12 @@
 2001-10-16 Alexander Rawass <alexannika@users.sourceforge.net>
 
+	* modified src/vegaconfig
+	* added vegaconfig.{cpp,h} to src/Makefile.am
+	* added call to VegaConfig to main.cpp::main
+	
+
+2001-10-16 Alexander Rawass <alexannika@users.sourceforge.net>
+
 	* added data/vegastrike.config (not used yet)
 	* added src/vegaconfig.h  (not used yet)
 	* added src/vegaconfig.cpp (not used yet)
